Fixed gap in nav links

--- a/scss/layout/header/_nav.scss
+++ b/scss/layout/header/_nav.scss
@@ -5,7 +5,7 @@
 .header__nav {
     .header__nav-list {
         display: flex;
-        gap: 10px;
+        gap: 20px;
         a {
             padding: 0.5em 1em;
             font-weight: 800;
